Fixed animation bugs on ios

--- a/css/header.css
+++ b/css/header.css
@@ -227,6 +227,13 @@ header .wrapper {
     }
 }
 
+@media (min-width: 320px) and (max-height: 576px) {
+    .logo {
+        width: 75px;
+        height: 75px;
+    }
+}
+
 @media (min-width: 425px) and (max-width: 768px) {
     header .wrapper {
         padding-top: 20px;
