--- a/css/parallax.css
+++ b/css/parallax.css
@@ -27,7 +27,7 @@
 .truck > div {
     position: absolute;
     left: 0;
-    bottom: -70px;
+    bottom: -80px;
     height: 100%;
 }
 
@@ -92,7 +92,7 @@
 }
 
 .road-sign {
-    margin-bottom: 100px;
+    margin-bottom: 70px;
     height: 260px;
     width: 260px;
     display: flex;
@@ -102,7 +102,6 @@
     background-position: center;
     background-size: cover;
     transform: rotate(45deg);
-    transition: transform 0.4s ease;
     cursor: pointer;
     z-index: 1;
     visibility: hidden;
@@ -229,6 +228,30 @@
     }
     .phone h2 {
         font-size: 2rem;
+    }
+}
+
+@media (min-width: 320px) and (max-height: 576px) {
+    .truck {
+        display: none;
+    }
+    .info-panel {
+        padding-top: 110px;
+    }
+    .headers h1,
+    .headers h2 {
+        visibility: visible;
+    }
+    .call-button a {
+        font-size: 1rem;
+    }
+    .road-sign {
+        height: 100px;
+        width: 100px;
+        visibility: visible;
+    }
+    .phone {
+        visibility: visible;
     }
 }
 
@@ -450,5 +473,12 @@
     }
     .phone h2 {
         font-size: 4rem;
+    }
+}
+
+@media (min-width: 1025px) and (orientation: landscape) {
+    .road-sign {
+        align-self: flex-end;
+        margin-right: 200px;
     }
 }
